2002-10-15  Stephen M Moraco <stephmo@users.sourceforge.net>

  * 2nd pass at cleaning up Makefiles
    - added build/install of all docs as targets separate
	  from normal brickOS build/install
	- enabled 'make tag' from top Makefile
  * Install of headers and brickOS itself is all that remains
    to be done in next make update
  * Merge util/Makefile.common into top Makefile.common
    - rework util/ Makefiles to use top Makefile.common

2002-10-11  Joseph A Woolley <jawoolley@users.sourceforge.net>

  * Added locked_increment and locked_decrement to inc/dec an
    unsigned char value; interrupt safe.  Added
    locked_check_and_increment function; used by 
    enter_critical_section.
  * Added critsec.c, critsec.h and sys/critsec.h to implement 
    critical sections.
  * Added a 'kernel critical section' that can be used in the
    kernel to keep the task swapper from switching tasks.
    This is a simple and 'cost effective' way to manage critical
    resources.  This prevents a task from being killed while
    in a critical region of code.  It also keeps two tasks
    from modifying kernel structures at the same time.  This
    replaces the use of semaphores which don't support nesting
    and cannot be used while in the task manager while swapping.
    A task should never yield, sleep or exit while in a critical
    section; whether kernel or user level.
  * Replaced semaphore in task manager with critical section.
  * Replaced semaphore in memory manager with critical section.
  * Added definitions for the Control Status Register (CSR) for
    the Watch Dog Timer (WDT) and the Counter Register (CNT)
    for the WDT.
  * Seperated sys_time increment code from the systime_handler
    and attached sys_time clock to the WDT.  This is 
    configured to use the NMI, so clock should be more
    accurate.  Named sys_time handler 'clock_handler'.
  * Seperated sub-systems from task switcher in systime.c
    and called sub-system handler 'subsystem_handler'.  The